Update1 index.html
Code korrigiert

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
     <div class="container">
         <h1>Matherätsel: Entschlüssle das Passwort</h1>
-        <h2>Aufgabe: Verschlüssele das Wort <strong>EULER</strong> zu <strong>KHWKD</strong></h2>
+        <h2>Aufgabe: Verschlüssele das Wort <strong>EULER</strong> zu <strong>KEWKD</strong></h2>
         <p>Max hat ein 5x6-Tastaturfeld verwendet, um das Wort zu verschlüsseln:</p>
         <div class="alphabet">
             <span>A</span><span>B</span><span>C</span><span>D</span><span>E</span>
