--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 <body>
     <div class="container">
         <h1>Matherätsel: Entschlüssle das Passwort</h1>
-        <h2>Aufgabe: Verschlüssele das Wort <strong>EULER</strong> zu <strong>KEWKD</strong></h2>
-        <p>Max hat das folgende Tastaturfeld verwendet, um das Wort zu verschlüsseln:</p>
+        <h2>Aufgabe: Finde heraus, wie Max das Wort <strong>EULER</strong> zu <strong>KEWKD</strong> verschlüsselt hat</h2>
+        <p>Max hat das folgende Tastaturfeld verwendet:</p>
         <div class="alphabet">
             <span>A</span><span>B</span><span>C</span><span>D</span><span>E</span>
             <span>F</span><span>G</span><span>H</span><span>I</span><span>J</span>
